--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,6 +13,8 @@ repos:
     rev: "v1.8.0"
     hooks:
       - id: mypy
+        additional_dependencies:
+          [types-requests, types-PyYAML]
   - repo: https://github.com/igorshubovych/markdownlint-cli
     rev: v0.38.0
     hooks:
