-Update --Pyproject.toml with pyswmm --Dates of basic_drainage to align to default precip downloader dates

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ dependencies = [ # TODO definitely don't need all of these
                 "pyarrow",
                 "pygeos",
                 "pysheds",
+                "pyswmm",
                 "PyYAML",
                 "rasterio",
                 "SALib",
