Update geospatial_analysis based on review

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,10 +27,10 @@ dependencies = [ # TODO definitely don't need all of these
                 "osmnx",
                 "pandas",
                 "pyarrow",
-                "pygeos",
                 "pysheds",
                 "PyYAML",
                 "rasterio",
+                "rioxarray",
                 "SALib",
                 "SciPy",
                 "shapely",
