--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ dependencies = [ # TODO definitely don't need all of these
                 "SALib",
                 "SciPy",
                 "shapely",
+                "shutils",
                 "snkit",
                 "tqdm",
                 "xarray"
