--- a/requirements.txt
+++ b/requirements.txt
@@ -47,6 +47,8 @@ colorama==0.4.6
     # via
     #   click
     #   tqdm
+configparser==6.0.0
+    # via shutils
 contourpy==1.2.0
     # via matplotlib
 cramjam==2.7.0
@@ -158,6 +160,8 @@ pyarrow==14.0.2
     # via swmmanywhere (pyproject.toml)
 pygeos==0.14
     # via swmmanywhere (pyproject.toml)
+pymysql==1.1.0
+    # via shutils
 pyparsing==3.1.1
     # via
     #   matplotlib
@@ -202,6 +206,8 @@ shapely==2.0.2
     #   osmnx
     #   snkit
     #   swmmanywhere (pyproject.toml)
+shutils==0.1.0
+    # via swmmanywhere (pyproject.toml)
 six==1.16.0
     # via
     #   fiona
