--- a/requirements.txt
+++ b/requirements.txt
@@ -48,6 +48,7 @@ cligj==0.7.2
 colorama==0.4.6
     # via
     #   click
+    #   loguru
     #   tqdm
 contourpy==1.2.0
     # via matplotlib
@@ -94,6 +95,8 @@ lazy-loader==0.3
     # via scikit-image
 llvmlite==0.41.1
     # via numba
+loguru==0.7.2
+    # via swmmanywhere (pyproject.toml)
 matplotlib==3.8.2
     # via
     #   salib
@@ -237,6 +240,8 @@ tzdata==2024.1
     # via pandas
 urllib3==2.1.0
     # via requests
+win32-setctime==1.1.0
+    # via loguru
 xarray==2023.12.0
     # via
     #   rioxarray
