--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -34,3 +34,11 @@ repos:
     hooks:
     - id: pyproject-fmt
       name: Apply a consistent format to pyproject.toml
+  
+  - repo: https://github.com/dosisod/refurb
+    rev: v1.28.0
+    hooks:
+    - id: refurb
+      name: Modernizing Python codebases using Refurb
+      additional_dependencies:
+      - numpy
