--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,34 +13,35 @@ authors = [
     { name = "Imperial College London RSE Team", email = "ict-rse-team@imperial.ac.uk" }
 ]
 requires-python = ">=3.10"
-dependencies = [ # TODO definitely don't need all of these
-                "cdsapi",
-                "fastparquet",
-                "fiona",
-                "geopandas",
-                "geopy",
-                "GitPython",
-                "loguru",
-                "matplotlib",
-                "netcdf4",
-                "networkx",
-                "numpy",
-                "osmnx",
-                "pandas",
-                "pyarrow",
-                "pydantic",
-                "pysheds",
-                "pyswmm",
-                "PyYAML",
-                "rasterio",
-                "rioxarray",
-                "SALib",
-                "SciPy",
-                "shapely",
-                "snkit",
-                "tqdm",
-                "xarray"
-                ]
+dependencies = [
+  # TODO definitely don't need all of these
+  "cdsapi",
+  "fastparquet",
+  "fiona",
+  "geopandas",
+  "geopy",
+  "GitPython",
+  "loguru",
+  "matplotlib",
+  "netcdf4",
+  "networkx",
+  "numpy",
+  "osmnx",
+  "pandas",
+  "pyarrow",
+  "pydantic",
+  "pysheds",
+  "pyswmm",
+  "PyYAML",
+  "rasterio",
+  "rioxarray",
+  "SALib",
+  "SciPy",
+  "shapely",
+  "snkit",
+  "tqdm",
+  "xarray",
+]
 
 [project.optional-dependencies]
 dev = [
