--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ dependencies = [
   "geopy",
   "GitPython",
   "joblib",
+  "jsonschema",
   "loguru",
   "matplotlib",
   "netcdf4",
@@ -94,4 +95,7 @@ skip = "swmmanywhere/defs/iso_converter.yml,*.inp"
 ignore-words-list = "gage,gages"
 
 [tool.refurb]
-ignore = [184]
+ignore = [
+        184, # Because some frankly bizarre suggestions
+        109  # Because pyyaml doesn't support tuples
+        ]
