--- a/pyproject.toml
+++ b/pyproject.toml
@@ -97,6 +97,7 @@ select = ["D", "E", "F", "I"] # pydocstyle, pycodestyle, Pyflakes, isort
 
 [tool.ruff.per-file-ignores]
 "tests/*" = ["D100", "D104"]
+"docs/notebooks/quickstart.py"  = ["D100"]
 
 [tool.ruff.pydocstyle]
 convention = "google"
