--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,6 +4,23 @@ jobs:
   test:
     uses: ./.github/workflows/ci.yml
 
+  publish-docs:
+    needs: publish-PyPI
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+
+      - name: Install dependencies
+        run: pip install -r doc-requirements.txt
+
+      - name: Deploy Docs
+        run: mkdocs gh-deploy --force
+
   # publish:
   #   runs-on: ubuntu-latest
   #   needs: test
