Add streetcover to shapefile generation

--- a/tests/test_data/demo_config.yml
+++ b/tests/test_data/demo_config.yml
@@ -14,8 +14,8 @@ real:
 starting_graph: null
 graphfcn_list:
   - assign_id
-  - format_osmnx_lanes
   - remove_non_pipe_allowable_links
+  - calculate_streetcover
   - double_directed
   - fix_geometries
   - split_long_edges
