--- a/tests/test_data/demo_config.yml
+++ b/tests/test_data/demo_config.yml
@@ -21,6 +21,7 @@ graphfcn_list:
   - split_long_edges # Set a maximum edge length
   - merge_nodes # Merge nodes that are too close together
   - assign_id # Remove duplicates arising from merge_nodes
+  - clip_to_catchments # Clip graph to catchment subbasins
   - calculate_contributing_area # Calculate runoff coefficient
   - set_elevation # Set node elevation from DEM
   - double_directed # Format as directed graph enabling travel in both directions
@@ -30,7 +31,6 @@ graphfcn_list:
   - set_chahinian_angle # Transform edge angles to more sensible angle for weights
   - calculate_weights # Calculate weights for each edge
   - identify_outlets # Identify potential street->river outlets
-  - trim_to_outlets # Remove nodes that don't fall in any outlets' catchments
   - derive_topology # Shortest path to give network topology
   - pipe_by_pipe # Design pipe diameters and depths
   - assign_id # Final pass to ensure consistent 'id' and remove duplicates
