--- a/tests/test_data/demo_config.yml
+++ b/tests/test_data/demo_config.yml
@@ -31,6 +31,7 @@ graphfcn_list:
   - identify_outlets
   - derive_topology
   - pipe_by_pipe
+  - fix_geometries
   - assign_id
 metric_list:
   - nc_deltacon0
