--- a/tests/test_data/demo_config.yml
+++ b/tests/test_data/demo_config.yml
@@ -17,6 +17,7 @@ graphfcn_list:
   - fix_geometries # Ensure consistent geometry directions
   - remove_non_pipe_allowable_links # Filter out things like bridges/motorways
   - calculate_streetcover # Create shapefile of impervious street cover
+  - remove_parallel_edges # Remove parallel edges retaining the shorter one
   - to_undirected # Convert graph to undirected to facilitate cleanup
   - split_long_edges # Set a maximum edge length
   - merge_nodes # Merge nodes that are too close together
