--- a/tests/test_data/demo_config.yml
+++ b/tests/test_data/demo_config.yml
@@ -37,6 +37,21 @@ graphfcn_list:
   - fix_geometries # Ensure geometries present before printing
   - assign_id # Final pass to ensure consistent 'id' and remove duplicates
 metric_list:
+  - outlet_nse_flow
+  - outlet_kge_flow
+  - outlet_pbias_flow
+  - outlet_pbias_length
+  - outlet_pbias_npipes
+  - outlet_pbias_nmanholes
+  - outlet_nse_flooding
+  - outlet_kge_flooding
+  - outlet_pbias_flooding
+  - grid_nse_flooding
+  - grid_kge_flooding
+  - grid_pbias_flooding
+  - subcatchment_nse_flooding
+  - subcatchment_kge_flooding
+  - subcatchment_pbias_flooding
   - nc_deltacon0
   - nc_laplacian_dist
   - nc_laplacian_norm_dist
@@ -46,8 +61,7 @@ metric_list:
   - bias_flood_depth
   - kstest_edge_betweenness
   - kstest_betweenness
-  - outlet_nse_flow
-  - outlet_nse_flooding
+  - outlet_kstest_diameters
 parameter_overrides:
   hydraulic_design:
     diameters:
