--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,13 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         python-version: [ "3.10" ]
+        include:
+          - os: windows-latest
+            python-version: "3.10"
+            if: github.event_name == 'pull_request' && github.event.action == 'closed' &&  github.event.pull_request.merged == true
+          - os: macos-latest
+            python-version: "3.10"
+            if: github.event_name == 'pull_request' && github.event.action == 'closed' &&  github.event.pull_request.merged == true
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-python@v5
