--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,11 +17,11 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         python-version: [ "3.10" ]
-        if: github.event_name == 'pull_request' && github.event.action == 'closed' &&  github.event.pull_request.merged == true:
+        if: github.event_name == 'pull_request' && github.event.action == 'closed' &&  github.event.pull_request.merged == true
           include:
           - os: windows-latest
             python-version: "3.10"  
-        if: github.event_name == 'pull_request' && github.event.action == 'closed' &&  github.event.pull_request.merged == true:
+        if: github.event_name == 'pull_request' && github.event.action == 'closed' &&  github.event.pull_request.merged == true
           include:
           - os: macos-latest
             python-version: "3.10"  
