--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,12 +17,6 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         python-version: [ "3.10" ]
-        if: github.event_name == 'pull_request' && github.event.action == 'closed' &&  github.event.pull_request.merged == true
-          include:
-            - os: windows-latest
-              python-version: "3.10"  
-            - os: macos-latest
-              python-version: "3.10"  
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-python@v5
@@ -32,3 +26,22 @@ jobs:
       run: pip install -r dev-requirements.txt
     - name: Run tests
       run: pytest
+    
+  test-pr-merge:
+    needs: qa
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [windows-latest, macos-latest, ubuntu-latest]
+        python-version: [ "3.10" ]
+    if: ${{ github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true }}
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install dependencies
+        run: pip install -r dev-requirements.txt
+      - name: Run tests
+        run: pytest
