--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,19 @@ jobs:
       run: pip install -r dev-requirements.txt
     - name: Run tests
       run: pytest
-    
+
+on:
+  pull_request:
+    types:
+      - closed
+  
+jobs:
+  qa:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: pre-commit/action@v3.0.1
+      
   test-pr-merge:
     if: github.event.pull_request.merged == true
     needs: qa
