--- a/tests/test_data/demo_config.yml
+++ b/tests/test_data/demo_config.yml
@@ -39,19 +39,19 @@ graphfcn_list:
 metric_list:
   - outlet_nse_flow
   - outlet_kge_flow
-  - outlet_pbias_flow
-  - outlet_pbias_length
-  - outlet_pbias_npipes
-  - outlet_pbias_nmanholes
+  - outlet_relerror_flow
+  - outlet_relerror_length
+  - outlet_relerror_npipes
+  - outlet_relerror_nmanholes
   - outlet_nse_flooding
   - outlet_kge_flooding
-  - outlet_pbias_flooding
+  - outlet_relerror_flooding
   - grid_nse_flooding
   - grid_kge_flooding
-  - grid_pbias_flooding
+  - grid_relerror_flooding
   - subcatchment_nse_flooding
   - subcatchment_kge_flooding
-  - subcatchment_pbias_flooding
+  - subcatchment_relerror_flooding
   - nc_deltacon0
   - nc_laplacian_dist
   - nc_laplacian_norm_dist
