remove api keys/new elevation downloader

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,10 +39,12 @@ dependencies = [
   "numpy",
   "osmnx",
   "pandas",
+  "planetary_computer",
   "pyarrow",
   "pydantic",
   "pyflwdir",
   "pysheds",
+  "pystac_client",
   "pyswmm",
   "PyYAML",
   "rasterio",
