--- a/requirements.txt
+++ b/requirements.txt
@@ -39,6 +39,7 @@ click==8.1.7
     #   click-plugins
     #   cligj
     #   fiona
+    #   planetary-computer
     #   rasterio
 click-plugins==1.1.1
     # via
@@ -86,7 +87,9 @@ imageio==2.33.1
 joblib==1.3.2
     # via swmmanywhere (pyproject.toml)
 jsonschema==4.21.1
-    # via swmmanywhere (pyproject.toml)
+    # via
+    #   pystac
+    #   swmmanywhere (pyproject.toml)
 jsonschema-specifications==2023.12.1
     # via jsonschema
 julian==0.14
@@ -140,6 +143,7 @@ packaging==23.2
     #   fastparquet
     #   geopandas
     #   lazy-loader
+    #   planetary-computer
     #   pyswmm
     #   rioxarray
     #   scikit-image
@@ -156,10 +160,14 @@ pillow==10.2.0
     # via
     #   imageio
     #   scikit-image
+planetary-computer==1.0.0
+    # via swmmanywhere (pyproject.toml)
 pyarrow==14.0.2
     # via swmmanywhere (pyproject.toml)
 pydantic==2.5.3
-    # via swmmanywhere (pyproject.toml)
+    # via
+    #   planetary-computer
+    #   swmmanywhere (pyproject.toml)
 pydantic-core==2.14.6
     # via pydantic
 pyflwdir==0.5.8
@@ -173,12 +181,27 @@ pyproj==3.6.1
     #   rioxarray
 pysheds==0.3.5
     # via swmmanywhere (pyproject.toml)
+pystac[validation]==1.10.1
+    # via
+    #   planetary-computer
+    #   pystac-client
+pystac-client==0.8.2
+    # via
+    #   planetary-computer
+    #   swmmanywhere (pyproject.toml)
 pyswmm==1.5.1
     # via swmmanywhere (pyproject.toml)
 python-dateutil==2.9.0.post0
-    # via pandas
+    # via
+    #   pandas
+    #   pystac
+    #   pystac-client
+python-dotenv==1.0.1
+    # via planetary-computer
 pytz==2024.1
-    # via pandas
+    # via
+    #   pandas
+    #   planetary-computer
 pyyaml==6.0.1
     # via swmmanywhere (pyproject.toml)
 rasterio==1.3.9
@@ -194,6 +217,8 @@ requests==2.31.0
     # via
     #   cdsapi
     #   osmnx
+    #   planetary-computer
+    #   pystac-client
 rioxarray==0.15.1
     # via swmmanywhere (pyproject.toml)
 rpds-py==0.18.0
