--- a/pyproject.toml
+++ b/pyproject.toml
@@ -93,6 +93,9 @@ disallow_untyped_defs = false
 [tool.pytest.ini_options]
 addopts = "-v -p no:warnings --cov=swmmanywhere --cov-report=html --doctest-modules --ignore=swmmanywhere/__main__.py"
 
+[tool.doctest]
+skip_modules = ["swmmanywhere.logging"]
+
 [tool.ruff]
 select = ["D", "E", "F", "I"] # pydocstyle, pycodestyle, Pyflakes, isort
 
