--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,7 @@ dependencies = [
   "netcdf4",
   "netcomp@ git+https://github.com/barneydobson/NetComp.git",
   "networkx>=3",
-  "numpy",
+  "numpy<2.0.0",
   "osmnx",
   "pandas",
   "planetary_computer",
@@ -71,6 +71,7 @@ doc = [
   "mkdocs-bibtex",
   "mkdocs-coverage",
   "mkdocs-gen-files",
+  "mkdocs-include-markdown-plugin",
   "mkdocs-jupyter",
   "mkdocs-material",
   "mkdocs-material-extensions",
