--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,6 +6,8 @@ theme:
     primary: 'cyan'
   icon:
     repo: fontawesome/brands/github
+  features:
+    - content.code.copy
 
 extra_css:
   - stylesheets/extra.css
@@ -26,7 +28,14 @@ markdown_extensions:
   - footnotes
   - pymdownx.arithmatex:
       generic: true
- 
+  - pymdownx.highlight:
+      anchor_linenums: true
+      line_spans: __span
+      pygments_lang_class: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.superfences
+
 extra_javascript:
   - javascripts/mathjax.js
   - https://polyfill.io/v3/polyfill.min.js?features=es6
