--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,8 +15,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest]
-        python-version: [ "3.10" ]
+        os: [ubuntu-latest, windows-latest,macos-latest]
+        python-version: [ "3.11" ]
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-python@v5
