--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,14 +36,13 @@ dependencies = [
   "netcdf4",
   "netcomp@ git+https://github.com/barneydobson/NetComp.git",
   "networkx>=3",
-  "numpy<2.0.0",
+  "numpy",
   "osmnx",
   "pandas",
   "planetary_computer",
   "pyarrow",
   "pydantic",
   "pyflwdir",
-  "pysheds==0.3.5",
   "pystac_client",
   "pyswmm",
   "PyYAML",
