--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,5 +1,10 @@
 on: [release]
 
+permissions:
+  contents: write
+  attestations: write
+  id-token: write
+
 jobs:
   test:
     uses: ./.github/workflows/ci.yml
@@ -9,63 +14,56 @@ jobs:
     name: Build source distribution
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+    - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
 
-      - name: Build sdist
-        run: |
-          python -m pip install --upgrade build
-          python -m build
-
-      - uses: actions/upload-artifact@v3
-        with:
-          path: dist/swmmanywhere*
-
-      - uses: softprops/action-gh-release@v1
-        with:
-          files: dist/swmmanywhere*
+    - uses: hynek/build-and-inspect-python-package@v2
+      with:
+        attest-build-provenance-github: true
 
   publish-TestPyPI:
     needs: build-wheel
     name: Publish SWMManywhere to TestPyPI
     runs-on: ubuntu-latest
-    permissions:
-      id-token: write
 
     steps:
-      - name: Download sdist artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: artifact
-          path: dist
+    - name: Download packages built by build-and-inspect-python-package
+      uses: actions/download-artifact@v4
+      with:
+        name: Packages
+        path: dist
 
-      - name: Display structure of downloaded files
-        run: ls -R dist
+    - name: Generate artifact attestation for sdist and wheel
+      uses: actions/attest-build-provenance@v1
+      with:
+        subject-path: dist
 
-      - name: Publish package distributions to TestPyPI
-        uses: pypa/gh-action-pypi-publish@release/v1
-        with:
-          repository-url: https://test.pypi.org/legacy/
-          skip-existing: true
+    - name: Publish package distributions to TestPyPI
+      uses: pypa/gh-action-pypi-publish@release/v1
+      with:
+        repository-url: https://test.pypi.org/legacy/
+        skip-existing: true
 
   publish-PyPI:
     needs: publish-TestPyPI
     name: Publish SWMManywhere to PyPI
     runs-on: ubuntu-latest
-    permissions:
-      id-token: write
 
     steps:
-      - name: Download sdist artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: artifact
-          path: dist
+    - name: Download packages built by build-and-inspect-python-package
+      uses: actions/download-artifact@v4
+      with:
+        name: Packages
+        path: dist
 
-      - name: Display structure of downloaded files
-        run: ls -R dist
+    - name: Generate artifact attestation for sdist and wheel
+      uses: actions/attest-build-provenance@v1
+      with:
+        subject-path: dist
 
-      - name: Publish package distributions to PyPI
-        uses: pypa/gh-action-pypi-publish@release/v1
+    - name: Publish package distributions to PyPI
+      uses: pypa/gh-action-pypi-publish@release/v1
 
 
   publish-docs:
