Revert "Try with new pywbt release"
This reverts commit 453e6e497a836f0eec9cf78fbb1c761c1b6aca68.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,7 +45,7 @@ dependencies = [
   "pyflwdir",
   "pystac_client",
   "pyswmm",
-  "pywbt>=0.2.2",
+  "pywbt",
   "PyYAML",
   "rasterio",
   "rioxarray",
